[gd_scene load_steps=14 format=2]

[ext_resource path="res://Dialogue_Screen.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.215686, 0.215686, 0.215686, 0.741176 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.596078 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.215686, 0.215686, 0.215686, 0.0980392 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.596078 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.215686, 0.215686, 0.215686, 0.705882 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.215686, 0.215686, 0.215686, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Theme" id=10]
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 5 )
CheckBox/styles/focus = SubResource( 7 )
CheckBox/styles/hover = SubResource( 6 )
CheckBox/styles/hover_pressed = SubResource( 6 )
CheckBox/styles/normal = SubResource( 6 )
CheckBox/styles/pressed = SubResource( 6 )
Label/styles/normal = SubResource( 11 )
OptionButton/styles/focus = SubResource( 8 )
OptionButton/styles/hover = SubResource( 6 )
OptionButton/styles/normal = SubResource( 6 )
OptionButton/styles/pressed = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 20.0
bg_color = Color( 0.215686, 0.215686, 0.215686, 1 )
skew = Vector2( 0.3, 0 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 100
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="Theme" id=13]
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 5 )
CheckBox/styles/focus = SubResource( 7 )
CheckBox/styles/hover = SubResource( 6 )
CheckBox/styles/hover_pressed = SubResource( 6 )
CheckBox/styles/normal = SubResource( 6 )
CheckBox/styles/pressed = SubResource( 6 )
Label/styles/normal = SubResource( 12 )
OptionButton/styles/focus = SubResource( 8 )
OptionButton/styles/hover = SubResource( 6 )
OptionButton/styles/normal = SubResource( 6 )
OptionButton/styles/pressed = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=14]
content_margin_right = 20.0
bg_color = Color( 0.215686, 0.215686, 0.215686, 1 )
skew = Vector2( -0.3, 0 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="Theme" id=15]
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 5 )
CheckBox/styles/focus = SubResource( 7 )
CheckBox/styles/hover = SubResource( 6 )
CheckBox/styles/hover_pressed = SubResource( 6 )
CheckBox/styles/normal = SubResource( 6 )
CheckBox/styles/pressed = SubResource( 6 )
Label/styles/normal = SubResource( 14 )
OptionButton/styles/focus = SubResource( 8 )
OptionButton/styles/hover = SubResource( 6 )
OptionButton/styles/normal = SubResource( 6 )
OptionButton/styles/pressed = SubResource( 6 )

[node name="Dialogue_Screen" type="Control" groups=["BLOCKER"]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 16, 440 )
theme = SubResource( 10 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 0.99975
anchor_bottom = 1.00044
margin_right = 0.32
margin_bottom = -0.32
color = Color( 0, 0, 0, 0.768627 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.1
anchor_top = 0.840278
anchor_right = 0.89995
anchor_bottom = 0.955833
margin_right = 0.0639992
margin_bottom = -0.200001
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Speaker1" type="Label" parent="."]
anchor_left = 0.05
anchor_top = 0.729167
anchor_right = 0.29995
anchor_bottom = 0.818333
margin_right = 0.0639992
margin_bottom = -0.200001
theme = SubResource( 13 )
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Speaker2" type="Label" parent="."]
anchor_left = 0.7
anchor_top = 0.729167
anchor_right = 0.94995
anchor_bottom = 0.818333
margin_right = 0.0639992
margin_bottom = -0.200001
theme = SubResource( 15 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.35
anchor_top = 0.355556
anchor_right = 0.64975
anchor_bottom = 0.711556
margin_right = 0.32
margin_bottom = -0.32
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = -0.05
anchor_top = 0.444444
anchor_right = 0.19975
anchor_bottom = 0.711556
margin_right = 0.32
margin_bottom = -0.32
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.8
anchor_top = 0.444444
anchor_right = 1.04975
anchor_bottom = 0.711556
margin_right = 0.32
margin_bottom = -0.32
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}
